--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "react",
         "card swipe",
         "card reader",
-        "magentic reader",
+        "magentic reader"
     ],
     "author": "Arvindkumar Badwal <arvindkumar.b@hotmail.com>",
     "license": "MIT",
